# AI-telescreen

./: .gitignore  AGENTS.md  README.md  claude-orchestrator.example.toml  claude-orchestrator.toml  pyproject.toml
claude_orchestrator/: __init__.py  __main__.py  bootstrap.py  cli.py  compat.py  config.py  db.py  diagnostics.py  guardrails.py  integrations.py  logging_utils.py  models.py  providers.py  redaction.py  repository.py  retry.py  state_machine.py  timeutils.py  workspaces.py
claude_orchestrator/backends/: agent_sdk.py  base.py  claude_code_cli.py  codex_cli.py  factory.py  message_batches.py  messages_api.py
claude_orchestrator/migrations/: 0001_initial.sql  0002_add_provider_columns.sql  0003_add_job_stream_events.sql  0004_add_workspace_integrations.sql  0005_add_saved_projects.sql  0006_add_job_project_id.sql  0007_add_project_manager.sql  0008_add_project_manager_response_schema.sql  0009_add_project_manager_messages.sql  0010_add_project_operator_feedback.sql  0011_add_project_manager_autonomy.sql  0012_add_project_initial_context.sql  0013_add_project_default_model.sql  (+2 more)
docs/: operator-guide.md
tests/: __init__.py  helpers.py  test_agent_backend.py  test_backend_contracts.py  test_claude_code_cli.py  test_cli.py  test_codex_cli.py  test_diagnostics.py  test_guardrails.py  test_integrations.py  test_message_batches.py  test_messages_backend.py  test_project_manager.py  test_recovery.py  test_redaction.py  test_repository.py  test_retry_policy.py  test_state_machine.py  test_web_app.py  test_worker_lifecycle.py  test_workspaces.py
(+19 files in other folders)
